<resources>
    <!-- Menu Items -->
    <string name="action_refresh">Refresh</string>
    <string name="delete_wallet">Delete Wallet</string>
    <string name="delete_person">Delete Person</string>
    <string name="open_in_browser">Open In Browser</string>

    <!-- Transitions -->
    <string name="transition_balance" translatable="false">transition_balance</string>
    <string name="transition_name" translatable="false">transition_name</string>
    <string name="transition_address" translatable="false">transition_address</string>
    <string name="transition_main_background" translatable="false">transition_main_background</string>

    <!-- Time Ago -->
    <string name="never">never</string>
    <string name="in_the_future">in the future</string>
    <string name="just_now">just now</string>
    <string name="a_minute_ago">a minute ago</string>
    <string name="x_minutes_ago">%d minutes ago</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="x_hours_ago">%d hours ago</string>
    <string name="yesterday">yesterday</string>
    <string name="x_days_ago">%d days ago</string>

    <!-- Settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_data_sync_and_notifications">Sync and Notifications</string>
    <string name="pref_header_info">Info</string>
    <string name="title_license">License</string>
    <string name="license">MIT License\n\nCopyright © 2017 Zyzxdev\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="x_taps_away">You are now %d taps away from showing developer options.</string>
    <string name="dev_options_shown">Developer options are now enabled.</string>
    <string name="dev_options">Developer Options</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_category_transactions">Transactions</string>
    <string name="pref_auto_update">Auto Update Transactions</string>
    <string name="pref_summary_auto_update">If set, transactions will automatically update in the background and the app will notify you if there are any new ones.</string>
    <string name="pref_transaction_update_interval">Transaction Update Interval</string>
    <string name="pref_transaction_ringtone">Notification Sound</string>
    <string name="pref_transaction_vibrate">Vibrate</string>
    <string name="pref_transaction_light">Use Notification Light</string>
    <string name="pref_summary_transaction_light">The notification light color is red. This will be customizable in the future.</string>

    <!-- General Purpose Strings™ -->
    <string name="app_name">CryptoPal</string>
    <string name="title_activity_main_tabbed">CryptoPal</string>
    <string name="bar_title_wallets">CryptoPal - Wallets</string>
    <string name="bar_title_people">CryptoPal - People</string>
    <string name="bar_title_settings">CryptoPal - Settings</string>
    <string name="title_settings">Settings</string>
    <string name="wallet_name_placeholder">Wallet Name</string>
    <string name="wallet_address_placeholder">Wallet Address</string>
    <string name="wallet_balance_placeholder">Wallet Balance</string>
    <string name="wallet_pk_placeholder">Wallet Private Key (Optional)</string>
    <string name="done">Done</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="missing_qr_title">Missing App</string>
    <string name="missing_qr_text">To scan QR codes, you need the QR scanner app from ZXing. Would you like to download it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wallet_details_title">Wallet Details</string>
    <string name="error_updating">There was an error updating data.</string>
    <string name="transaction_sent">Sent</string>
    <string name="transaction_received">Received</string>
    <string name="transaction_date_placeholder">Date</string>
    <string name="last_updated_placeholder">Transactions last updated: 69 years ago</string>
    <string name="BTC">BTC</string>
    <string name="BTC_balance">%s BTC</string>
    <string name="transactions_last_updated">Transactions last updated: %s</string>
    <string name="blank_usd">$--.--</string>
    <string name="BTC_value_placeholder">1 BTC = $--.--</string>
    <string name="BTC_value">1 BTC = %s</string>
    <string name="new_btc">Mined</string>
    <string name="title_wallets">Wallets</string>
    <string name="title_people">People</string>
    <string name="person_name_placeholder">Person Name</string>
    <string name="person_address_placeholder">Person Address</string>
    <string name="add_person">Add Person</string>
    <string name="edit_person">Edit Person</string>
    <string name="bar_title_dashboard">CryptoPal - Dashboard</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="add_transaction_card">Add Transaction Card</string>
    <string name="add_btc_value_card">Add BTC Value Card</string>
    <string name="add_update_card">Add update card</string>
    <string name="channel_transactions">Transactions</string>
    <string name="channel_transactions_description">Notifications for new transactions.</string>
	<string name="clear_all">Clear All</string>
	<string name="update_now">Update now</string>
	<string name="send_test_notification">Send test notification</string>
	<string name="channel_silent">Silent</string>
	<string name="channel_silent_description">Un-important notifications that are silent.</string>
</resources>
