<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="zyzxdev.cryptopal.activity.DeveloperOptionsActivity">

    <Button
        android:id="@+id/addTransactionCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_transaction_card" />

    <Button
        android:id="@+id/addUpdateCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/add_update_card" />

    <Button
        android:id="@+id/addBTCValueCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/add_btc_value_card" />

    <Button
        android:id="@+id/updateNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Update Now" />
</LinearLayout>
