<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="zyzxdev.cryptopal.WalletDetailsActivity"
    tools:showIn="@layout/activity_wallet_details">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:clipChildren="false"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/walletBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:text="@string/wallet_balance_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:transitionName="@string/transition_balance" />

        <TextView
            android:id="@+id/walletBalanceUSD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:text="@string/wallet_balance_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lastUpdated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_updated_placeholder"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <ListView
        android:id="@+id/mainListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:dividerHeight="0dp"
        tools:layout_conversion_absoluteHeight="1000000dp"
        tools:layout_conversion_absoluteWidth="360dp"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="164dp">

    </ListView>


</LinearLayout>
